fix: corrigida verificacao e uso de lista imutavel